mus: Embed the new surface in WindowPortMus::AllocateLocalSurfaceId

Bug: 807448
Change-Id: Id4c03c01d714de010a8306fc97bcd1a98dfaa3cb