ui/aura/mus/window_port_mus.cc
@@ -403,6 +403,8 @@ WindowPortMus::ChangeSource WindowPortMus::OnTransientChildRemoved(
 
 void WindowPortMus::AllocateLocalSurfaceId() {
   local_surface_id_ = parent_local_surface_id_allocator_.GenerateId();
+  if (window_->IsEmbeddingClient())
+    UpdatePrimarySurfaceId();
 }
 
 const viz::LocalSurfaceId& WindowPortMus::GetLocalSurfaceId() {
